# infraredComp

./: .gitignore  .gitmodules  AGENTS.md  README.md  main.py  pyproject.toml  start_services.ps1  start_services.sh
benchmark/: __init__.py  __main__.py  demo.py  elic_model.py  html_report.py  learned.py  metrics.py  report_template.html  runner.py  traditional.py  visualize.py
datasets/: README.md
models/diffTok/: .CLAUDE.md  .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
models/diffTok/.claude/: CONVENTIONS.md  settings.local.json
models/diffTok/.serena/: project.yml
models/diffTok/.serena/memories/: config_access_pattern.md
models/diffTok/configs/stage1/5090/: B_V_4096_RERD.yaml
models/diffTok/configs/stage1/h100/: B_V_4096_RERD.yaml  N_B_V_4096_RERD.yaml
models/diffTok/docs/: download_dinov2.md  download_imagenet.md
models/diffTok/docs/plans/: 2026-03-07-stage1-evaluator-design.md  2026-03-07-stage1-evaluator-implementation.md
models/diffTok/scripts/: convert_checkpoint.py  download_dinov2.py  download_imagenet.py  download_imagenet.sh
models/diffTok/src/components/: __init__.py  attention.py  contour_block.py  contour_final_layer.py  embed.py  norm.py  rope.py
models/diffTok/src/decoders/: __init__.py  contour_decoder.py
models/diffTok/src/encoders/: __init__.py  contour_encoder.py
models/diffTok/src/losses/: __init__.py  rd_loss.py
models/diffTok/src/nets/: __init__.py  contour_vqae.py
models/diffTok/src/quantizers/: kmeans_pp.py  quantizer1d.py
results/: report.html  results.csv  results.md
(+194 files in other folders)
