[project]
name = "infraredcomp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "compressai>=1.2.8",
    "fastapi>=0.115.0",
    "kaggle>=2.2.2",
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=12.2.0",
    "pillow-heif>=1.4.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "scikit-image>=0.26.0",
    "tabulate>=0.10.0",
    "torch>=2.12.1",
    "uvicorn[standard]>=0.32.0",
    "static-ffmpeg>=3.0",
    "pyarrow>=25.0.0",
    "modelscope>=1.38.1",
]
