[project]
name = "difftok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.6.1",
    "diffusers>=0.37.0",
    "einops>=0.8.2",
    "httpx[socks]>=0.28.1",
    "huggingface-hub>=1.6.0",
    "iopath>=0.1.10",
    "matplotlib>=3.10.8",
    "omegaconf>=2.3.0",
    "pyarrow>=23.0.1",
    "tensorboard>=2.20.0",
    "termcolor>=3.3.0",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.25.0",
    "webdataset>=1.0.2",
    "xformers>=0.0.35",
]
